# pydevkit

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Makefile  README-short.md  README.md  pyproject.toml  run.py  setup.py  tox.ini
.ci/: mk-venv  requirements.txt  venv
docs/: devel.md  hunspell-en-custom.txt  markdownlint.jsonc  pyspelling.yml
scripts/: pdk-progress
src/: argparse.py  conf.py  term.py
src/log/: __init__.py  config.py  extra.py
src/pydevkit/: __init__.py  argparse.py  conf.py
src/pydevkit/log/: __init__.py  base.py  config.py  extra.py
tests/: test_argparse.py  test_log.py  test_shell.py
wheels/: README.md
