[project]
name = "pydevkit"
dynamic = ["version"]
description = "python development kit"
readme = "README.md"
license = "GPL-2.0-only"
authors = [
    { name = "Anatoly Asviyan", email = "aanatoly@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]

dependencies = []

[project.urls]
Homepage   = "https://github.com/aanatoly/pydevkit"
Repository = "https://github.com/aanatoly/pydevkit"

#### pdm ####
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "scm"
write_to = "pydevkit/__version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
excludes = [ "**/.*.sw*" ]

[tool.cruft]
skip = ["README.md", "tests/"]

[tool.black]
line-length = 83
