[project]
name = "pydevkit"
dynamic = ["version"]
description = "python development kit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anatoly Asviyan", email = "aanatoly@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]

dependencies = []

[project.urls]
Homepage   = "https://github.com/aanatoly/pydevkit"
Repository = "https://github.com/aanatoly/pydevkit"

#### pdm ####
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "scm"
write_to = "pydevkit/__version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
excludes = [ "**/.*.sw*" ]

[tool.cruft]
skip = ["README.md", "tests/"]

[tool.black]
line-length = 83

[tool.ruff]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    # pycodestyle
    "W"
]

ignore = [
    # Module level import not at top of file
    "E402"
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN",
    "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP",
    "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE",
    "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]
unfixable = []

line-length = 83
